// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should show a container restart event marker 1`] = `
<DocumentFragment>
  <svg
    data-testid="timeline-main-view"
    height="100"
    width="100"
  >
    <g
      data-testid="timeline-event-marker"
      transform="translate(NaN, -5)"
    >
      <g>
        <svg
          clip-rule="evenodd"
          data-testid="restart-event"
          fill-rule="evenodd"
          height="10"
          stroke-linejoin="round"
          stroke-miterlimit="2"
          viewBox="0 0 16 15"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.202 1.183l6.612 11.268a1.354 1.354 0 01-.508 1.866c-.211.12-.451.183-.694.183H1.388A1.377 1.377 0 010 13.134c0-.24.064-.475.186-.683L6.798 1.183a1.4 1.4 0 012.404 0z"
            fill="#ff9064"
          />
        </svg>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`should show a container termination event marker 1`] = `
<DocumentFragment>
  <svg
    data-testid="timeline-main-view"
    height="100"
    width="100"
  >
    <g
      data-testid="timeline-event-marker"
      transform="translate(NaN, -5)"
    >
      <g>
        <svg
          data-testid="termination-event"
          height="10"
          viewBox="0 0 16 16"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.202 13.817l6.612-11.268a1.354 1.354 0 00-.508-1.866A1.406 1.406 0 0014.612.5H1.388C.621.5 0 1.112 0 1.866c0 .24.064.475.186.683l6.612 11.268a1.4 1.4 0 002.404 0z"
            fill="#FF9064"
            fill-rule="evenodd"
          />
        </svg>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`should show a policy violation event marker 1`] = `
<DocumentFragment>
  <svg
    data-testid="timeline-main-view"
    height="100"
    width="100"
  >
    <g
      data-testid="timeline-event-marker"
      transform="translate(NaN, -5)"
    >
      <g>
        <svg
          data-testid="policy-violation-event"
          height="10"
          version="1.1"
          viewBox="0 0 15 15"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            transform="translate(0 .1)"
          >
            <rect
              fill="#FF5782"
              height="14.58"
              rx="2.43"
              width="14.58"
            />
            <path
              d="M8.071 8.37H6.616l-.325-5.584h2.12L8.07 8.37zm-1.833 2.22c0-.346.091-.614.275-.804.184-.19.458-.286.82-.286.364 0 .639.094.825.282.186.189.279.458.279.808 0 .345-.096.613-.29.804-.192.19-.463.285-.813.285-.359 0-.631-.096-.817-.289-.186-.192-.28-.46-.28-.8z"
              fill="#FFF"
            />
          </g>
        </svg>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`should show a process activity event marker 1`] = `
<DocumentFragment>
  <svg
    data-testid="timeline-main-view"
    height="100"
    width="100"
  >
    <g
      data-testid="timeline-event-marker"
      transform="translate(NaN, -5)"
    >
      <g>
        <svg
          data-testid="process-activity-event"
          height="10"
          viewBox="0 0 16 16"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#5677DD"
            fill-rule="evenodd"
            height="14.58"
            rx="2.43"
            transform="translate(-689 -673)"
            width="14.58"
            x="689"
            y="673.1"
          />
        </svg>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`should show a process in baseline activity event marker 1`] = `
<DocumentFragment>
  <svg
    data-testid="timeline-main-view"
    height="100"
    width="100"
  >
    <g
      data-testid="timeline-event-marker"
      transform="translate(NaN, -5)"
    >
      <g>
        <svg
          data-testid="process-in-baseline-activity-event"
          height="10"
          viewBox="0 0 16 16"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            transform="translate(0 .1)"
          >
            <rect
              fill="#56DDB2"
              height="14.58"
              rx="2.43"
              width="14.58"
            />
            <path
              d="M4.459 6.768a.807.807 0 00-1.18-.072.91.91 0 00-.067 1.24l2.685 3.17a.81.81 0 001.281-.043l4.645-6.244a.909.909 0 00-.144-1.233.808.808 0 00-1.172.151L6.48 9.153l-2.02-2.385z"
              fill="#FFF"
              fill-rule="nonzero"
            />
          </g>
        </svg>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
